--- a/terminal-shell-aliases/index.html
+++ b/terminal-shell-aliases/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- Body starts here -->
-
+    <h1 class="flex-col color-test">Hello World</h1>
 
     <!-- Scripts -->
     <script src="script.js"></script>
